Alteração de estrutura de nome de arquivos Adição de comentários Criaçao de estrutura base HTML de template

--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,10 @@
 	<title>First App with React</title>
 </head>
 <body>
-	<h1>Primeira APP com React.js</h1>
-
+	<!-- Corpo da Aplicação -->
 	<div id="g-content"></div>
 
+	<!-- Arquivo gerado por browserify / Contendo React.js -->
 	<script src="./app/bundle/index.js"></script>
 </body>
 </html>
