Divisão de componets, add node_modules, +ES6

--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<!-- Corpo da Aplicação -->
-	<div id="g-content"></div>
+	<div class="g-content"></div>
 
 	<!-- Arquivo gerado por browserify / Contendo React.js -->
-	<script src="./app/bundle/index.js"></script>
+	<script src="./app/dist/bundle.js"></script>
 </body>
 </html>
